--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@clack/prompts": "^0.7.0",
+    "commander": "^12.0.0",
     "octokit": "^5.0.3"
   },
   "devDependencies": {
